<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="repaymentschedule">Repayment Schedule</string>


    <string name="principal">Principal</string>
    <string name="interest">Interest</string>
    <string name="installments">Installments</string>
    <string name="remaining_debt">Remaining Debt</string>

    <string name="annuityloan">Annuity Loan</string>

    <string-array name="loantype">
        <item>Annuity Loan</item>
        <item>Serial Loan</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Norwegian</item>
    </string-array>
</resources>