<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.loancalculator.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_repaymentListFragment"
            app:destination="@id/repaymentListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.loancalculator.app.ui.gallery.SettingsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.loancalculator.app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/repaymentListFragment"
        android:name="com.loancalculator.app.ui.home.RepaymentListFragment"
        android:label="@string/repaymentschedule" >
        <argument
            android:name="loanData"
            app:argType="com.loancalculator.data.LoanData" />
    </fragment>
</navigation>