<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/principal"
                android:paddingTop="6dp"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tv_title1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/interest"
                android:paddingTop="6dp"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tv_title2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/installments"
                android:paddingTop="6dp"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tv_title3" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/remaining_debt"
                android:paddingTop="6dp"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp"
                android:id="@+id/tv_title4" />

        </TableRow>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>